# godot-ai

./: .gitattributes  .gitignore  CLAUDE.md  README.md  friction_log.md  pyproject.toml
.claude/: settings.local.json
.claude/hooks/: session-start.sh
.githooks/: post-checkout
.github/workflows/: bump-and-release.yml  ci.yml  close-issues-on-beta-merge.yml  forensic-issue-245.yml  pr-checks.yml  release.yml
docs/: CONTRIBUTING.html  CONTRIBUTING.md  TOOLS.md  design-stable-host-worker.html  design-stable-host-worker.md  friction-log.md  go-no-go-gates.html  go-no-go-gates.md  history-foundation-phases.html  history-foundation-phases.md  implementation-plan.html  implementation-plan.md  investigation-dev-reload.html  investigation-dev-reload.md  packaging-distribution.html  packaging-distribution.md  plugin-architecture.html  plugin-architecture.md  product-positioning.html  product-positioning.md  proposal.html  proposal.md  readme-visual-punchlist.html  readme-visual-punchlist.md  risk-register.html  risk-register.md  testing-strategy.html  testing-strategy.md  tool-taxonomy.html  tool-taxonomy.md
script/: audit-self-update-load-surface  ci-check-gdscript  ci-find-regression-range  ci-game-capture-smoke  ci-godot-tests  ci-quit-test  ci-reload-test  ci-start-server  local-self-update-smoke  manual-orphan-test  open-godot-here  render-docs-html  serve-this-worktree  setup-dev  setup-dev.ps1  verify-worktree
test_project/: capture_smoke.tscn  cyberpunk_hud.gd  cyberpunk_hud.tscn  hud_loader.gd  main.tscn  project.godot  snowman.tscn
tests/: conftest.py
(+369 files in other folders)
